Fixed issue on SD home page with image too large for viewport

--- a/src/Components/EventHomeJumbotron/styles.scss
+++ b/src/Components/EventHomeJumbotron/styles.scss
@@ -17,5 +17,11 @@
         width: 100%;
         height: 100%;
         max-width: none;
+
+        .logoContainer {
+            img {
+                max-width: 100%;
+            }
+        }
     }
 }
